Fix code review findings: race condition, portability, and code quality
Replace volatile boolean start/stop flags with AtomicBoolean and
compareAndSet to eliminate the check-then-act race window in Andersoni
lifecycle methods.

Replace H2-specific MERGE INTO with portable UPDATE-then-INSERT in
DbPollingSyncStrategy for broader JDBC compatibility.

Migrate HttpSyncStrategy from java.util.logging to SLF4J for
consistent logging across all modules.

Deduplicate RefreshEventCodec by moving it to andersoni-core and
removing Jackson dependency from both Kafka sync modules.

Replace single volatile RefreshListener with CopyOnWriteArrayList
in SpringKafkaSyncStrategy to support multiple subscribers.

Introduce AndersoniException and replace bare RuntimeException throws
in DbPollingSyncStrategy and K8sLeaseLeaderElection.

Add final to 7 class declarations, all local variables in
ClusterController, fix Collectors.toList() to .toList(), clean up
unqualified type references in Catalog, remove unused searchExecuted
and catalogRefreshed from AndersoniMetrics, and remove @Autowired
from single-constructor bean.